# raft

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  proto.rs  state_machine.rs
